--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: himesh881/grid_based_game:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/grid_based_game:latest
